# burn-on-esp

./: Cargo.toml  README.md
.cargo/: config.toml
src/: conv.rs  main.rs  mlp.rs  model.rs
